<resources>
    <string name="app_name">reemaFinal</string>
    <string name="welcome_back">welcome back</string>
    <string name="log_in">log in</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="full_name">full name</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="email">email</string>
    <string name="enter_your_email">enter your email</string>
    <string name="create_password">create password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="Sign_up">Sign up</string>
    <string name="already_have_an_account_log_in">already have an account?log in</string>
    <string name="Create_your_account">Create your account</string>
    <string name="icon">icon</string>
    <string name="todo">todo</string>
    <string name="Quests">Quests</string>
    <string name="Level">Level</string>
    <string name="Rewards">Rewards</string>
    <string name="Competition">Competition</string>
    <string name="quests">Quests</string>
    <string name="level">Level</string>
    <string name="rewards">Rewards</string>
    <string name="competition">Competition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_quests_fragment">This is Quests Fragment</string>
    <string name="this_is_competition_fragment">this_is_competition_fragment</string>
    <string name="this_is_competition_fragment1">this is competition fragment</string>
    <string name="this_is_level_fragment">this is level fragment</string>
    <string name="this_is_rewards_fragment">this is rewards fragment</string>
    <string name="create_your_account">Create your account</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="add_a_new_quest">Add a New Quest</string>
    <string name="subject">Subject</string>
    <string name="game_id">Game ID</string>
    <string name="note_optional">Note (Optional)</string>
    <string name="add_quest">Add Quest</string>
    <string name="game_mission">GAME MISSION</string>
    <string name="speed_challenge">SPEED CHALLENGE</string>
    <string name="score">SCORE</string>
    <string name="time2">TIME</string>
    <string name="start_game">START GAME</string>
    <string name="_250">250</string>
    <string name="_01_35">01:35</string>
    <string name="game_id_1024">GAME ID: 1024</string>
    <string name="random_opponent">Random Opponent</string>
    <string name="find_a_match_worldwide">Find a match worldwide</string>
    <string name="ai_assistant_convo">AI Assistant / Convo</string>
    <string name="practice_or_chat_with_our_ai">Practice or chat with our AI</string>
    <string name="invite_your_friends_to_a_match">Invite your friends to a match</string>
    <string name="challenge_friends">Challenge Friends</string>
    <string name="competition_arena">Competition Arena</string>
    <string name="_5">5</string>
    <string name="player_name">Player Name</string>
    <string name="xp_points">XP POINTS</string>
    <string name="_450_1000">450 / 1000</string>
    <string name="my_achievements">My Achievements</string>
    <string name="novice">Novice</string>
    <string name="adventurer">Adventurer</string>
    <string name="pro">Pro</string>
    <string name="master">Master</string>
    <string name="legend">Legend</string>
    <string name="_1">1</string>
    <string name="player_name_">Player Name</string>
    <string name="_0_pts">0 pts</string>
    <string name="rewards_">REWARDS</string>
    <string name="total_rewards">Total Rewards</string>
    <string name="_1_250">1,250</string>
    <string name="earned">Earned</string>
    <string name="_1_000_pts">1,000 pts</string>
    <string name="from_friends">From Friends</string>
    <string name="_250_pts">250 pts</string>
    <string name="community_milestone">COMMUNITY MILESTONE</string>
    <string name="goal_50_000_pts">Goal: 50,000 pts</string>
    <string name="when_reached_everyone_gets_a_special_badge">When reached, everyone gets a special badge!</string>
    <string name="global_leaderboard">Global Leaderboard</string>
    <string name="rank_12">RANK #12</string>
    <string name="you">You</string>
    <string name="settings">Settings</string>
</resources>